# F12se

./: .gitignore  .gitmodules  CMakeLists.txt  F12se.qbs  build.bat
F2se/: Common.cpp  Common.h  CrittersEdit.cpp  CrittersEdit.h  F2se.cbp  F2seApp.cpp  F2seApp.h  F2seMain.cpp  F2seMain.h  ItemEdit.cpp  ItemEdit.h  Localization.cpp  Localization.h  MyListBox.h  SavEdit.cpp  SavEdit.h  SettingsEdit.cpp  SettingsEdit.h  wxStaticBitmapEx.cpp  wxStaticBitmapEx.h  wxWidgetsUserData.cpp  wxWidgetsUserData.h  напоминалки.txt
F2se/Files for release/: Changelog.txt  Readme.txt
F2se/Files for release/Language/: Brazilian Portuguese.lng  English.lng  Russian.lng  Traditional Chinese.lng
F2se/wxsmith/: CrittersEdit.wxs  F12seFrame.wxs  ItemEdit.wxs  SavEdit.wxs  SettingsEdit.wxs
F2seMyLibs/: CityTxt.cpp  CityTxt.h  DataModel.cpp  DataModel.h  Defines.h  FRM.cpp  FRM.h  FileFinder.cpp  FileFinder.h  Fl_Layout.h  Fl_LayoutH.h  Fl_LayoutV.h  GAM.cpp  GAM.h  IniFile.cpp  IniFile.h  MSG.cpp  MSG.h  MemBuffer.cpp  MemBuffer.h  MemBufferEX.cpp  MemBufferEX.h  PRO.cpp  PRO.h  SAV.cpp  SAV.h  SFallGV.cpp  SFallGV.h  SaveDat.cpp  SaveDat.h  Settings.cpp  Settings.h  U8String.c  U8String.h  VecOfStr.cpp  VecOfStr.h  WinFunc.cpp  WinFunc.h  commontypes.h  fallout.cpp  (+22 more)
F2seMyLibs/SimpleHexEdit/: shecBase.h  shecFLTK.cpp  shecFLTK.h  shecWX.cpp  shecWX.h
F2seTPL/: lzss.cpp  lzss.h
